--- a/xalnl/src/Makefile.in
+++ b/xalnl/src/Makefile.in
@@ -315,7 +315,9 @@ AM_CXXFLAGS = $(CFLAGS_DEBUG) $(CFLAGS_CLK_TCK) -Wall \
 	-DD_CUI_MOUSE
 
 AM_LDFLAGS = `pkg-config \--libs gtk+-2.0 \--libs gthread-2.0` \
-	`sdl-config --libs` -lSDL_mixer -lv8
+	`sdl-config --libs` -lSDL_image -lSDL_mixer \
+	-lGL -lGLU -lglut \
+	-lv8
 
 xalnl_SOURCES = \
 	FileList.cpp FileList.h GameThread.cpp GameThread.h GlobalVar.cpp \
