--- a/xalnl/Makefile
+++ b/xalnl/Makefile
@@ -228,7 +228,7 @@ INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LDFLAGS = 
 LIBOBJS = 
-LIBS = -lSDL -lSDL_mixer -lgpm -lpthread -lm -ltermcap -lncursesw -lncurses -lcurses 
+LIBS = -lGL -lSDL_mixer -lSDL -lgpm -lpthread -lm -ltermcap -lncursesw -lncurses -lcurses 
 LN_S = ln -s
 LTLIBOBJS = 
 MAKEINFO = makeinfo
