--- a/xalnl/configure.in
+++ b/xalnl/configure.in
@@ -37,8 +37,12 @@ AC_CHECK_LIB([m], [sin])
 AC_CHECK_LIB([v8], [Value::IsNull])
 AC_CHECK_LIB([pthread], [pthread_create])
 AC_CHECK_LIB([gpm], [Gpm_Open])
+AC_CHECK_LIB([SDL], [SDL_Init])
+AC_CHECK_LIB([SDL_opengl], [SDL_GL_SwapBuffers])
 AC_CHECK_LIB([SDL_mixer], [Mix_PlayMusic])
-AC_CHECK_LIB([SDL], [SDL_JoystickOpen])
+AC_CHECK_LIB([GL], [glClear])
+AC_CHECK_LIB([GLu], [gluBeginSurface])
+AC_CHECK_LIB([GLut], [glutInit])
 
 # Checks for header files.
 AC_HEADER_STDC
@@ -51,7 +55,7 @@ AC_CHECK_HEADERS([sys/fcntl.h])
 AC_CHECK_HEADERS([getopt.h])
 AC_CHECK_HEADERS([v8.h])
 AC_CHECK_HEADERS([gpm.h])
-AC_CHECK_HEADERS([SDL/SDL.h SDL/SDL_mixer.h])
+AC_CHECK_HEADERS([SDL/SDL.h SDL/SDL_opengl.h SDL/SDL_mixer.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
