--- a/xalnl/src/config.h.in
+++ b/xalnl/src/config.h.in
@@ -57,6 +57,15 @@
 /* Define to 1 if you have the `curses' library (-lcurses). */
 #undef HAVE_LIBCURSES
 
+/* Define to 1 if you have the `GL' library (-lGL). */
+#undef HAVE_LIBGL
+
+/* Define to 1 if you have the `GLu' library (-lGLu). */
+#undef HAVE_LIBGLU
+
+/* Define to 1 if you have the `GLut' library (-lGLut). */
+#undef HAVE_LIBGLUT
+
 /* Define to 1 if you have the `gpm' library (-lgpm). */
 #undef HAVE_LIBGPM
 
@@ -77,6 +86,9 @@
 
 /* Define to 1 if you have the `SDL_mixer' library (-lSDL_mixer). */
 #undef HAVE_LIBSDL_MIXER
+
+/* Define to 1 if you have the `SDL_opengl' library (-lSDL_opengl). */
+#undef HAVE_LIBSDL_OPENGL
 
 /* Define to 1 if you have the `termcap' library (-ltermcap). */
 #undef HAVE_LIBTERMCAP
@@ -119,6 +131,9 @@
 
 /* Define to 1 if you have the <SDL/SDL_mixer.h> header file. */
 #undef HAVE_SDL_SDL_MIXER_H
+
+/* Define to 1 if you have the <SDL/SDL_opengl.h> header file. */
+#undef HAVE_SDL_SDL_OPENGL_H
 
 /* Define to 1 if you have the `setenv' function. */
 #undef HAVE_SETENV
