feat: Use SDL2 lib.

--- a/xalnl/src/Makefile.in
+++ b/xalnl/src/Makefile.in
@@ -306,16 +306,16 @@ top_srcdir = @top_srcdir@
 @CHK_DEF_CLK_TCK_TRUE@CFLAGS_CLK_TCK = '-DCLK_TCK=1000000'
 AM_CFLAGS = $(CFLAGS_DEBUG) $(CFLAGS_CLK_TCK) -Wall \
 	-DD_GTK `pkg-config --cflags gtk+-2.0` \
-	`sdl-config --cflags ` \
+	`sdl2-config --cflags ` \
 	-DD_CUI_MOUSE -DD_GL
 
 AM_CXXFLAGS = $(CFLAGS_DEBUG) $(CFLAGS_CLK_TCK) -Wall \
 	-DD_GTK `pkg-config --cflags gtk+-2.0` \
-	`sdl-config --cflags ` \
+	`sdl2-config --cflags ` \
 	-DD_CUI_MOUSE -DD_GL
 
 AM_LDFLAGS = `pkg-config \--libs gtk+-2.0 \--libs gthread-2.0` \
-	`sdl-config --libs` -lSDL_image -lSDL_mixer \
+	`sdl2-config --libs` -lSDL2_image -lSDL2_mixer \
 	-lGL -lGLU -lglut -lX11 \
 	-lv8
 
