--- a/xalnl/src/config.h.in
+++ b/xalnl/src/config.h.in
@@ -81,14 +81,14 @@
 /* Define to 1 if you have the `pthread' library (-lpthread). */
 #undef HAVE_LIBPTHREAD
 
-/* Define to 1 if you have the `SDL' library (-lSDL). */
-#undef HAVE_LIBSDL
+/* Define to 1 if you have the `SDL2' library (-lSDL2). */
+#undef HAVE_LIBSDL2
 
-/* Define to 1 if you have the `SDL_mixer' library (-lSDL_mixer). */
-#undef HAVE_LIBSDL_MIXER
+/* Define to 1 if you have the `SDL2_mixer' library (-lSDL2_mixer). */
+#undef HAVE_LIBSDL2_MIXER
 
-/* Define to 1 if you have the `SDL_opengl' library (-lSDL_opengl). */
-#undef HAVE_LIBSDL_OPENGL
+/* Define to 1 if you have the `SDL2_opengl' library (-lSDL2_opengl). */
+#undef HAVE_LIBSDL2_OPENGL
 
 /* Define to 1 if you have the `termcap' library (-ltermcap). */
 #undef HAVE_LIBTERMCAP
@@ -126,14 +126,14 @@
 /* Define to 1 if you have the `pthread_detach' function. */
 #undef HAVE_PTHREAD_DETACH
 
-/* Define to 1 if you have the <SDL/SDL.h> header file. */
-#undef HAVE_SDL_SDL_H
+/* Define to 1 if you have the <SDL2/SDL.h> header file. */
+#undef HAVE_SDL2_SDL_H
 
-/* Define to 1 if you have the <SDL/SDL_mixer.h> header file. */
-#undef HAVE_SDL_SDL_MIXER_H
+/* Define to 1 if you have the <SDL2/SDL_mixer.h> header file. */
+#undef HAVE_SDL2_SDL_MIXER_H
 
-/* Define to 1 if you have the <SDL/SDL_opengl.h> header file. */
-#undef HAVE_SDL_SDL_OPENGL_H
+/* Define to 1 if you have the <SDL2/SDL_opengl.h> header file. */
+#undef HAVE_SDL2_SDL_OPENGL_H
 
 /* Define to 1 if you have the `setenv' function. */
 #undef HAVE_SETENV
