--- a/xalnl/man/Makefile
+++ b/xalnl/man/Makefile
@@ -179,7 +179,7 @@ INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LDFLAGS = 
 LIBOBJS = 
-LIBS = -lGL -lSDL2_mixer -lSDL2 -lpthread -lm 
+LIBS = -lGL -lSDL2_mixer -lSDL2 -lgpm -lpthread -lm -ltermcap -lncursesw -lncurses -lcurses 
 LN_S = ln -s
 LTLIBOBJS = 
 MAKEINFO = makeinfo
