--- a/xalnl/src/config.h.in
+++ b/xalnl/src/config.h.in
@@ -21,6 +21,9 @@
 /* Define to 1 if you don't have `vprintf' but do have `_doprnt.' */
 #undef HAVE_DOPRNT
 
+/* Define to 1 if you have the <FTGL/ftgl.h> header file. */
+#undef HAVE_FTGL_FTGL_H
+
 /* Define to 1 if you have the `getenv' function. */
 #undef HAVE_GETENV
 
@@ -56,6 +59,9 @@
 
 /* Define to 1 if you have the `curses' library (-lcurses). */
 #undef HAVE_LIBCURSES
+
+/* Define to 1 if you have the `ftgl' library (-lftgl). */
+#undef HAVE_LIBFTGL
 
 /* Define to 1 if you have the `GL' library (-lGL). */
 #undef HAVE_LIBGL
