--- a/xalnl/src/Makefile.in
+++ b/xalnl/src/Makefile.in
@@ -316,7 +316,7 @@ AM_CXXFLAGS = $(CFLAGS_DEBUG) $(CFLAGS_CLK_TCK) -Wall \
 
 AM_LDFLAGS = `pkg-config \--libs gtk+-2.0 \--libs gthread-2.0` \
 	`sdl2-config --libs` -lSDL2_image -lSDL2_mixer \
-	-lGL -lGLU -lglut -lX11 \
+	-lGL -lGLU -lglut -lftgl -lX11 \
 	-lv8
 
 xalnl_SOURCES = \
