chore: Compile alnl.

--- a/alnl/src/config.h.in
+++ b/alnl/src/config.h.in
@@ -84,6 +84,9 @@
 /* Define to 1 if you have the `nanosleep' function. */
 #undef HAVE_NANOSLEEP
 
+/* Define to 1 if you have the <ncursesw/cursesw.h> header file. */
+#undef HAVE_NCURSESW_CURSESW_H
+
 /* Define to 1 if you have the <ncursesw.h> header file. */
 #undef HAVE_NCURSESW_H
 
